Resolved flickering tables for customer types

--- a/banklite/src/assets/scss/shared/_globalstyles.scss
+++ b/banklite/src/assets/scss/shared/_globalstyles.scss
@@ -634,6 +634,9 @@ button.togglestyle{
     }
     .loading-text{
         font-size: 23px;
+        &.toleft{
+            text-align: left;
+        }
     }
 }
 .no-records{
